--- a/wil/templates/pagination.html
+++ b/wil/templates/pagination.html
@@ -3,12 +3,12 @@
     <div class="post-meta pure-g">
         <div class="pure-u-1-2 left">
             {% if articles_page.has_previous() %}
-            <a href="{{ SITEURL }}/{{ articles_previous_page.url }}">Previous articles</a>
+            <a href="{{ SITEURL }}/{{ articles_previous_page.url }}">Previous</a>
             {% endif %}
         </div>
         <div class="pure-u-1-2 right">
             {% if articles_page.has_next() %}
-            <a href="{{ SITEURL }}/{{ articles_next_page.url }}">More articles</a>
+            <a href="{{ SITEURL }}/{{ articles_next_page.url }}">More</a>
             {% endif %}
         </div>
     </div>
