--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -233,6 +233,13 @@ div.main-container {
 
   }
 
+  .summary {
+    hyphens: auto;
+    p {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
 }
 
 
