automatically add summary unless skip_summary is set

--- a/wil/templates/article.html
+++ b/wil/templates/article.html
@@ -49,6 +49,9 @@
     </div>
     <div class="entry-content">
       <div class="pure-u">
+        {% if not article.skip_summary %}
+        {{article.summary}}
+        {% endif %}
         {{article.content}}
       </div>
     </div>
