--- a/wil/templates/includes/posts.html
+++ b/wil/templates/includes/posts.html
@@ -1,7 +1,7 @@
 {% for article in articles_page.object_list %}
 <div class="post pure-g">
   <div class="pure-u-1 pure-u-md-3-8">
-    <a class="thumbnail">
+    <a class="thumbnail" href="{{ SITEURL }}/{{ article.url}}">
       <img class="thumb pure-img" src="{{ SITEURL }}/thumb/{{ article.thumb }}" alt="{{ article.title }}">
     </a>
   </div>
